# delila-server

./: .gitignore  Cargo.toml
migrations/20170115012055_create_initial_models/: down.sql  up.sql
src/: app_info.rs  errors.rs  lib.rs  main.rs  models.rs  pathsettings.rs
src/scid/: common.rs  errors.rs  matsig.rs  mod.rs
src/tasks/: import.rs  importfile.rs  importpgn.rs  initialize.rs  mod.rs
