[package]
name = "delila"
version = "0.1.0"
authors = ["Lakin Wecker <lakin@structuredabstraction.com>"]

[dependencies]
app_dirs = "1.1.1"
chrono = { version = "0.3.1", features = ["serde", "rustc-serialize"] }
diesel_codegen = { version = "0.13.0", features = ["sqlite"] }
diesel = { version = "0.13.0", features = ["chrono", "sqlite"] }
dotenv = "0.9.0"
error-chain = "0.10.0"
futures = "0.1.13"
futures-cpupool = "0.1.5"
samson = { git = "https://github.com/lakinwecker/samson.git" }
serde = "1.0.7"
serde_derive = "1.0.7"
serde_json = "1.0.1"
slog = "2"
slog-async = "2"
slog-term = "2"
ws = "0.7.1"
