[package]
name = "delila"
version = "0.1.0"
authors = ["Lakin Wecker <lakin@structuredabstraction.com>"]

[dependencies]
app_dirs = "1.1.1"
chrono = { version = "0.4.0", features = ["serde", "rustc-serialize"] }
clippy = {version = "*", optional = true}
diesel_infer_schema = { version = "1.0.0-beta1", features = ["sqlite"] }
diesel_migrations = { version = "1.0.0-beta1", features = ["sqlite"] }
diesel = { version = "1.0.0-beta1", features = ["chrono", "sqlite"] }
dotenv = "0.10.1"
error-chain = "0.11.0"
futures = "0.1.17"
futures-cpupool = "0.1.7"
hyper = "0.10.11"
# samson = { git = "https://github.com/lakinwecker/samson.git" }
serde = "1.0.24"
serde_derive = "1.0.24"
serde_json = "1.0.8"
slog = "2.1.1"
slog-async = "2.2.0"
slog-term = "2.3.0"
ws = "0.7.3"
